--- a/package.json
+++ b/package.json
@@ -18,16 +18,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "D": "^1.0.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jest": "^26.6.3",
     "jsonschema": "^1.2.6",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
-    "pg": "^8.3.0"
+    "nodemon": "^2.0.7",
+    "pg": "^8.5.1"
   },
   "devDependencies": {
     "supertest": "^5.0.0-0"
